# OnlyFans-Economic-Index

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  gist_push.sh  of_user.txt  onlyfans_profiles.db  pyproject.toml
src/onlyfans_economic_index/: browser_service.py  database.py  database_factory.py  database_interface.py  main.py  migration.py  mock_browser_service.py  onlyfans_api_service.py  sqlite_database.py  supa_database.py
tests/: test_main.py  test_onlyfans_api_service.py
