[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onlyfans-economic-index"
version = "0.1.0"
description = "OnlyFans-Economic-Index is a project aimed at creating an economic index based on the earnings of content creators on the OnlyFans platform. Inspired by the Stripper Index."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "intMeric", email = "int.meric@protonmail.ch"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

# Dépendances de production (pour l'instant vides)
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1", 
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.1",
]

[project.urls]
Repository = "https://github.com/intMeric/OnlyFans-Economic-Index"

[project.scripts]
oei = "onlyfans_economic_index.main:main"

# Configuration des outils
[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=src --cov-report=term-missing"